# builders

./: .gitignore
mssva/omatic/: buildmssva.sh  mssva.sh
mssva/omatic/mss_test/: Makefile  gputest_mssva.c
mssva/omatic/mssva_inf/: Makefile.am  bootstrap  configure.ac  mssva_inf.c  mssva_inf.h
xrdp/Makefile/: Makefile  Makefile.inc  config_ac.h  readme.txt  xrdp_configure_options.h
xrdp/Makefile/common/: Makefile
xrdp/Makefile/keygen/: Makefile
xrdp/Makefile/libxrdp/: Makefile
xrdp/Makefile/sesman/: Makefile
xrdp/Makefile/sesman/chansrv/: Makefile
xrdp/Makefile/sesman/libscp/: Makefile
xrdp/Makefile/vnc/: Makefile
xrdp/Makefile/xrdp/: Makefile
xrdp/Makefile/xup/: Makefile
yami/omatic/: 0001-Encoder-Avoid-memory-leak.patch  0002-RGB-YUV-fix.patch  buildyami.sh
yami/omatic/yami_inf/: Makefile.am  configure.ac  yami_inf.c  yami_inf.h
