EXTRA_DIST =

EXTRA_DEFINES =
EXTRA_INCLUDES =
EXTRA_LIBS =
EXTRA_FLAGS =
EXTRA_SRC =
EXTRA_ENCODE_SRC =

AM_CFLAGS = -I. $(LIBVA_CFLAGS) $(LIBYAMI_CFLAGS) $(EXTRA_DEFINES)
YAMI_INF_EXTRA_LIBS = $(LIBVA_LIBS) $(LIBYAMI_LIBS) $(EXTRA_LIBS)

if YAMI_INF_X11
AM_CFLAGS += -DYAMI_INF_X11 $(LIBVAX11_CFLAGS)
YAMI_INF_EXTRA_LIBS += $(LIBVAX11_LIBS)
endif

if YAMI_INF_XCB
AM_CFLAGS += -DYAMI_INF_XCB $(LIBXCB_CFLAGS)
YAMI_INF_EXTRA_LIBS += $(LIBXCB_LIBS)
endif

INCLUDES = $(EXTRA_INCLUDES)

lib_LTLIBRARIES = libyami_inf.la

libyami_inf_la_LDFLAGS = $(EXTRA_FLAGS)

libyami_inf_ladir = $(moduledir)

libyami_inf_la_SOURCES = yami_inf.c $(EXTRA_ENCODE_SRC)

libyami_inf_la_LIBADD = $(YAMI_INF_EXTRA_LIBS)

include_HEADERS = yami_inf.h
